# featurefuse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
example/: hydra_main.py  main.py  naive_feature.py
example/config/: feature.yaml  selected_feature.yaml
featurefuse/: base.py  generator.py
src/featurefuse/: generator.py
