[project]
name = "featurefuse"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "yutaro.ueno", email = "yutarofortech@gmail.com" }
]
dependencies = ["pandas~=2.0.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pre-commit~=3.3.3", "hydra-core~=1.3.2"]
[tool.hatch.metadata]
allow-direct-references = true
